src/test/ui/consts/const-eval/unused-broken-const.stderr
warning: due to multiple output types requested, the explicitly specified output file name will be adapted for each output type

error: any use of this value will cause an error
  --> $DIR/unused-broken-const.rs:5:18
   |
LL | const FOO: i32 = [][0];
   | -----------------^^^^^-
   |                  |
   |                  index out of bounds: the len is 0 but the index is 0
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

